--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AnakKu">
+        <activity android:name=".ChildProfileActivity"></activity>
         <activity
             android:name=".HomeActivity"
             android:exported="false" />
