--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AnakKu">
-        <activity android:name=".ComplaintActivity"></activity>
+        <activity android:name=".ForumActivity"></activity>
+        <activity android:name=".ComplaintActivity" />
         <activity android:name=".NewActActivity" />
         <activity android:name=".ImmunizationActivity" />
         <activity
